<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linearTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_profile_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anonymous"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_userEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="30dp"
            android:padding="15dp"
            android:text="userEmail_(temporary)"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearSeparation1"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#EAEAEA"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/linearSeparation2"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#EAEAEA"
        android:orientation="horizontal"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:minHeight="30dp"
        android:padding="15dp"
        android:text="@string/log_out"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearSeparation3"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#EAEAEA"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/tv_deleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:minHeight="30dp"
        android:padding="15dp"
        android:text="@string/delete_account"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearSeparation4"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#EAEAEA"
        android:orientation="horizontal" />


    <TextView
        android:id="@+id/tv_moRoomVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:minHeight="30dp"
        android:padding="15dp"
        android:text="@string/app_version"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/moveToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_style_1"
        android:text="@string/go_to_login"
        android:visibility="gone" />

</LinearLayout>